--- a/docs/product/PreGod/unified_metadata_schemas.mdx
+++ b/docs/product/PreGod/unified_metadata_schemas.mdx
@@ -22,8 +22,7 @@ All types under the tag `transaction` (`transfer`, `mint`, `burn`) share the sam
 ```json
 {
     "logo": "https://s2.coinmarketcap.com/static/img/coins/64x64/3890.png",
-    "name": "Polygon",
-    "network": "Polygon",
+    "name": "polygon",
     "symbol": "MATIC",
     "decimals": 18,
     "value": "1000000000000000000",
@@ -46,8 +45,7 @@ They both follow the same UMS as `transaction`
 ```json
 {
     "logo": "https://s2.coinmarketcap.com/static/img/coins/64x64/3890.png",
-    "name": "Polygon",
-    "network": "Polygon",
+    "name": "polygon",
     "symbol": "MATIC",
     "decimals": 18,
     "value": "1000000000000000000",
@@ -68,7 +66,6 @@ They both follow the same UMS as `transaction`
     "to": {
         "image": "https://s2.coinmarketcap.com/static/img/coins/64x64/825.png",
         "name": "Tether USD",
-        "network": "Polygon",
         "symbol": "USDT",
         "decimals": 6,
         "value": "28652612",
@@ -78,7 +75,6 @@ They both follow the same UMS as `transaction`
     "from": {
         "image": "https://s2.coinmarketcap.com/static/img/coins/64x64/3408.png",
         "name": "USD Coin",
-        "network": "Polygon",
         "symbol": "USDC",
         "decimals": 6,
         "value": "28622667",
@@ -226,7 +222,6 @@ Therefore they both follow the same UMS:
     "name": "Henry",
     "handle": "Henry",
     "source": "crossbell",
-    "network": "crossbell",
     "platform": "",
     "profile_uri": ["ipfs://QmSX9QiwjTGBk5m22UscTg3vrbMwUfFsmxVzMH57hkPD5U/1021.png"],
     "banner_uri": [],
@@ -275,7 +270,6 @@ TBA
     "token": {
         "image": "https://s2.coinmarketcap.com/static/img/coins/64x64/825.png",
         "name": "Tether USD",
-        "network": "Polygon",
         "symbol": "USDT",
         "decimals": 6,
         "value": "10000000",
