doc: update `poap` in UMS

--- a/docs/product/PreGod/unified_metadata_schemas.mdx
+++ b/docs/product/PreGod/unified_metadata_schemas.mdx
@@ -154,7 +154,7 @@ All types under the tag `collectible` (`transfer`, `trade`, `mint`, `burn`), exc
         }
     ],
     "description": "The RSS3 2022 Q3 Internal Meeting",
-    "contract_address": "0x22c1f6050e56d2876009903609a2cc3fef83b415"
+    "address": "0x22c1f6050e56d2876009903609a2cc3fef83b415"
 }
 ```
 
