doc: update `contract_address` in UMS

--- a/docs/product/PreGod/unified_metadata_schemas.mdx
+++ b/docs/product/PreGod/unified_metadata_schemas.mdx
@@ -26,7 +26,7 @@ All types under the tag `transaction` (`transfer`, `mint`, `burn`) share the sam
     "symbol": "MATIC",
     "decimals": 18,
     "value": "1000000000000000000",
-    "address": "0x0000000000000000000000000000000000001010",
+    "contract_address": "0x0000000000000000000000000000000000001010",
     "standard": "ERC-20"
 }
 ```
@@ -49,7 +49,7 @@ They both follow the same UMS as `transaction`
     "symbol": "MATIC",
     "decimals": 18,
     "value": "1000000000000000000",
-    "address": "0x0000000000000000000000000000000000001010",
+    "contract_address": "0x0000000000000000000000000000000000001010",
     "standard": "ERC-20"
 }
 ```
@@ -69,7 +69,7 @@ They both follow the same UMS as `transaction`
         "symbol": "USDT",
         "decimals": 6,
         "value": "28652612",
-        "address": "0xc2132D05D31c914a87C6611C10748AEb04B58e8F",
+        "contract_address": "0xc2132D05D31c914a87C6611C10748AEb04B58e8F",
         "standard": "ERC-20"
     },
     "from": {
@@ -78,7 +78,7 @@ They both follow the same UMS as `transaction`
         "symbol": "USDC",
         "decimals": 6,
         "value": "28622667",
-        "address": "0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174",
+        "contract_address": "0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174",
         "standard": "ERC-20"
     }
 }
@@ -98,7 +98,7 @@ All types under the tag `collectible` (`transfer`, `trade`, `mint`, `burn`), exc
 {
   "id": 3111,
   "value": "1",
-  "address": "0xa6f969045641cf486a747a2688f3a5a6d43cd0d8",
+  "contract_address": "0xa6f969045641cf486a747a2688f3a5a6d43cd0d8",
   "standard": "ERC-721",
   "name": "RSS3 Whitepaper v1.0",
   "symbol": "RWP",
@@ -154,7 +154,7 @@ All types under the tag `collectible` (`transfer`, `trade`, `mint`, `burn`), exc
         }
     ],
     "description": "The RSS3 2022 Q3 Internal Meeting",
-    "address": "0x22c1f6050e56d2876009903609a2cc3fef83b415"
+    "contract_address": "0x22c1f6050e56d2876009903609a2cc3fef83b415"
 }
 ```
 
@@ -291,7 +291,7 @@ TBA
         "symbol": "USDT",
         "decimals": 6,
         "value": "10000000",
-        "address": "0xc2132D05D31c914a87C6611C10748AEb04B58e8F",
+        "contract_address": "0xc2132D05D31c914a87C6611C10748AEb04B58e8F",
         "standard": "ERC-20"
     }
 }
