doc: update data and filtering

--- a/docs/product/PreGod/datasource.mdx
+++ b/docs/product/PreGod/datasource.mdx
@@ -25,7 +25,6 @@ PreGod supports the filtering of data using multiple filtering conditions, some 
 | --------- | ------------------------------------ | ------------------- |
 | Crossbell | Crossbell                            | collectible, social |
 | Mirror    | Arweave                              | social              |
-| Lens      | Polygon                              | social              |
 | POAP      | Ethereum, xDai                       | collectible         |
 | Gitcoin   | Ethereum, Polygon, zkSync            | donation            |
 | Snapshot  | All (except Arweave)                 | governance          |
@@ -35,9 +34,9 @@ PreGod supports the filtering of data using multiple filtering conditions, some 
 
 | Tag         | Type                                                          |
 | ----------- | ------------------------------------------------------------- |
-| transaction | transfer, mint, burn, self                                    |
+| transaction | transfer, mint, burn                                          |
 | exchange    | withdraw, deposit, swap                                       |
-| collectible | trade, mint, burn, poap, self                                 |
+| collectible | transfer, trade, mint, burn, poap                             |
 | social      | post, revise, comment, share, profile, follow, unfollow, link |
 | donation    | launch, donate                                                |
 | governance  | propose, vote                                                 |
