doc: remove collectible `trade` in 1.1.0

--- a/docs/product/PreGod/datasource.mdx
+++ b/docs/product/PreGod/datasource.mdx
@@ -36,7 +36,7 @@ PreGod supports the filtering of data using multiple filtering conditions, some 
 | ----------- | ------------------------------------------------------------- |
 | transaction | transfer, mint, burn                                          |
 | exchange    | withdraw, deposit, swap                                       |
-| collectible | transfer, trade, mint, burn, poap                             |
+| collectible | transfer, mint, burn, poap                                    |
 | social      | post, revise, comment, share, profile, follow, unfollow, link |
 | donation    | launch, donate                                                |
 | governance  | propose, vote                                                 |
