--- a/docs/product/PreGod/unified_metadata_schemas.mdx
+++ b/docs/product/PreGod/unified_metadata_schemas.mdx
@@ -89,7 +89,7 @@ They both follow the same UMS as `transaction`
 
 ## Collectible
 
-All types under the tag `collectible` (`transfer`, `trade`, `mint`, `burn`), except `poap`, share the same UMS:
+All types under the tag `collectible` (`transfer`, `mint`, `burn`), except `poap`, share the same UMS:
 
 <Tabs>
   <TabItem value="collectible" label="collectible">
