doc: 1.1.0 openapi add /platforms

--- a/docs/product/PreGod/datasource.mdx
+++ b/docs/product/PreGod/datasource.mdx
@@ -30,6 +30,10 @@ PreGod supports the filtering of data using multiple filtering conditions, some 
 | Snapshot  | All (except Arweave)                 | governance          |
 | DEX, CEX  | Ethereum, Polygon, BSC, zkSync, xDai | exchange            |
 
+:::info
+For the complete list of supported platforms, see the [Platform API](/PreGod/api/get-platforms-of-a-tag) section.
+:::
+
 ### List of Tags and corresponding Types
 
 | Tag         | Type                                                          |
