devlog: PreGod v1.1.0 Release Note

--- a/devlog/2022-07-08.md
+++ b/devlog/2022-07-08.md
@@ -1,8 +1,8 @@
 ---
-title: PreGod v1.0.0 Released
+title: PreGod v1.0.0 Release Note
 authors: [Henry]
 date: 2022-07-08 13:22
-tags: [Changelog, PreGod v1.0.0]
+tags: [Release, Changelog, PreGod v1.0.0]
 ---
 
 Today we are thrilled to announce that PreGod v1.0.0 is officially in production 🥳.
