devlog: add author Jeff

--- a/devlog/2022-07-28.md
+++ b/devlog/2022-07-28.md
@@ -1,6 +1,6 @@
 ---
 title: PreGod v1.1.0 Release Note
-authors: [Henry,Kally,Polebug]
+authors: [Henry,Kally,Polebug,Jeff]
 date: 2022-07-28 15:24
 tags: [Release, Changelog, PreGod v1.1.0]
 ---
