--- a/docs/product/PreGod/datasource.mdx
+++ b/docs/product/PreGod/datasource.mdx
@@ -31,7 +31,7 @@ PreGod supports the filtering of data using multiple filtering conditions, some 
 | DEX, CEX  | Ethereum, Polygon, BSC, zkSync, xDai | exchange            |
 
 :::info
-For the complete list of supported platforms, see the [Platform API](/PreGod/api/get-platforms-of-a-tag) section.
+As PreGod supports over 100 different platforms we don't list them all here. For the complete list of supported platforms, see the [Platform API](/PreGod/api/get-platforms-of-a-tag) section.
 :::
 
 ### List of Tags and corresponding Types
