docs: remove crossbell

--- a/devlog/2022-07-29.md
+++ b/devlog/2022-07-29.md
@@ -36,7 +36,7 @@ Based on the feedback of developers, we have made some major improvements:
 
 - Adaption of UMS, a one-time adaption and you can support all future data sources
 - Removed per address filtering in `/notes` POST, the filters are now global
-- Lens integration (posts and comments) is temporarily removed as we are not satisfied with the  outcome. It will be back in the next version. Profiles and Follower NFTs are still included in v1.1.0.
+- Lens and Crossbell integration (posts and comments) is temporarily removed as we are not satisfied with the  outcome. It will be back in the next version. Profiles and Follower NFTs are still included in v1.1.0.
 
 Since v1.1.0 has slightly altered the structure to accommodate UMS, some lightweight migration work is required for migration, head to our [API Playground](/PreGod/api) to find out what's different. Meanwhile, v1.0.0 will be put into the maintenance-only mode, receiving critical security fixes only. **Developers are encouraged to migrate to v1.1.0 at the earliest convenience.**
 
