--- a/docs/product/PreGod/datasource.mdx
+++ b/docs/product/PreGod/datasource.mdx
@@ -17,13 +17,11 @@ PreGod supports the filtering of data using multiple filtering conditions, some 
 | zkSync                    | All         |
 | xDai                      | All         |
 | Arweave                   | social      |
-| Crossbell                 | All         |
 
 ### List of Platforms
 
 | Platform  | Network                              | Tag                 |
 | --------- | ------------------------------------ | ------------------- |
-| Crossbell | Crossbell                            | collectible, social |
 | Mirror    | Arweave                              | social              |
 | POAP      | Ethereum, xDai                       | collectible         |
 | Gitcoin   | Ethereum, Polygon, zkSync            | donation            |
@@ -41,6 +39,6 @@ As PreGod supports over 100 different platforms we don't list them all here. For
 | transaction | transfer, mint, burn                                          |
 | exchange    | withdraw, deposit, swap                                       |
 | collectible | transfer, mint, burn, poap                                    |
-| social      | post, revise, comment, share, profile, follow, unfollow, link |
+| social      | post, revise, comment, share, profile                         |
 | donation    | launch, donate                                                |
 | governance  | propose, vote                                                 |
